--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -97,3 +97,4 @@ Community volunteers maintain <<xref/../../guides/getting_started#,Getting Start
 * https://clojured.de/[clojureD] - A Clojure conference in Berlin, Germany
 * https://heartofclojure.eu/[Heart of Clojure] - A Clojure conference in Leuven, Belgium
 * https://clojuredays.org/[Dutch Clojure Days] - A Clojure conference in Amsterdam, the Netherlands
+* https://clojure-south.com/[Clojure/South] - A Clojure conference in Sao Paulo, Brazil
