added learn reagent and learn re-frame

--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -71,6 +71,8 @@ Video training (commercial):
 * https://www.pluralsight.com/courses/clojure-concurrency-tutorial[Clojure Concurrency] - Craig Andera (PluralSight)
 * https://www.packtpub.com/web-development/building-web-applications-clojure-video[Building Web Applications with Clojure] - Tomek Lipski (Packt)
 * https://lambdaisland.com/[Lambda Island] - Screencast series about ClojureScript and Clojure
+* https://www.learnreagent.com/[Learn Reagent] - Jacek Schae
+* https://www.learnreframe.com/[Learn re-frame] - Jacek Schae
 
 == Clojure Tools
 
