--- a/content/community/success_stories.adoc
+++ b/content/community/success_stories.adoc
@@ -430,7 +430,7 @@ Here are just some of the public success stories from companies using Clojure.  
                   </blockquote>
                 </li>
                 <li>
-                  <p><img style="border: 3px solid #ebebeb;" src="/images/logos/gojek.jpg" /></p>
+                  <p><img style="border: 3px solid #ebebeb;" src="/images/logos/gojek.png" /></p>
                   <p>
                     At <a target="gojek" href="https://www.gojek.io/">GO-JEK</a>, we rewrote our Allocation Engine in Clojure which enabled us to serve millions of customers to find a suitable driver for them.
                   </p>
