--- a/content/reference/other_libraries.adoc
+++ b/content/reference/other_libraries.adoc
@@ -85,7 +85,7 @@ Utilities for reading and writing XML data.
 
 == Zippers - Functional Tree Editing (https://clojure.github.io/clojure/clojure.zip-api.html[clojure.zip])
 
-Clojure includes purely functional, generic tree walking and editing, using a technique called a zipper (in namespace _**zip**_) . For background, see the http://www.google.com/search?q=huet%20functional%20zipper[paper by Huet]. A zipper is a data structure representing a location in a hierarchical data structure, and the path it took to get there. It provides down/up/left/right navigation, and localized functional 'editing', insertion and removal of nodes. With zippers you can write code that looks like an imperative, destructive walk through a tree, call https://clojure.github.io/clojure/clojure.zip-api.html#clojure.zip/root[root] when you are done and get a new tree reflecting all the changes, when in fact nothing at all is mutated - it's all thread safe and shareable. The https://clojure.github.io/clojure/clojure.zip-api.html#clojure.zip/next[next] function does a depth-first walk, making for easy to understand loops:
+Clojure includes purely functional, generic tree walking and editing, using a technique called a zipper (in namespace _**zip**_) . For background, see the https://www.google.com/search?q=huet%20functional%20zipper[paper by Huet]. A zipper is a data structure representing a location in a hierarchical data structure, and the path it took to get there. It provides down/up/left/right navigation, and localized functional 'editing', insertion and removal of nodes. With zippers you can write code that looks like an imperative, destructive walk through a tree, call https://clojure.github.io/clojure/clojure.zip-api.html#clojure.zip/root[root] when you are done and get a new tree reflecting all the changes, when in fact nothing at all is mutated - it's all thread safe and shareable. The https://clojure.github.io/clojure/clojure.zip-api.html#clojure.zip/next[next] function does a depth-first walk, making for easy to understand loops:
 
 [source,clojure]
 ----
