Update World Singles entry
We switched our corporate site to a new domain. The old one is now a dating site.

--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -451,7 +451,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * https://workframe.com/[Workframe,opts=nofollow]
 * http://www.workinvoice.it/[Workinvoice,opts=nofollow]
 * https://www.works-hub.com[WorksHub,opts=nofollow]
-* http://worldsingles.com/[World Singles,opts=nofollow]
+* https://worldsinglesnetworks.com/[World Singles Networks,opts=nofollow]
 * https://www.xapix.io/[Xapix GmbH,opts=nofollow]
 * https://xcoo.jp/[Xcoo Inc.,opts=nofollow]
 * http://xnlogic.com[XN Logic,opts=nofollow]
