--- a/content/community/training.adoc
+++ b/content/community/training.adoc
@@ -55,7 +55,7 @@ Typically these are 1 day events hosted by one or more sponsors.
 
 === Conferences
 
-For conferences and upcoming events, check the upcoming <<events,Events>> list.
+For conferences and upcoming events, check the upcoming <<events#,Events>> list.
 
 == Resources for trainers
 
