--- a/content/dev/creating_tickets.adoc
+++ b/content/dev/creating_tickets.adoc
@@ -7,13 +7,11 @@ Alex Miller
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
+If you do not have a JIRA account, please follow the <<xref/../../community/contributing#_reporting_problems_and_requesting_enhancements,preferred process>> for filing an issue at https://ask.clojure.org[ask.clojure.org]. If you're interested in supplying patches or contributing to Clojure, please see the <<dev#,development overview>>.
+
 == Creating Tickets
 
-The first step in the contribution process is to open a ticket. Please do so through https://clojure.atlassian.net/projects/CLJ[JIRA]. Tickets can be created by anyone, whether or not they have signed a <<contributor_agreement#,Clojure contributor agreement>>. It is OK to create a ticket and submit a patch at the same time, but often it's best to get some feedback in triage before making a patch. Most new tickets are reviewed within a day, but in some cases it may be as long as a week depending on the time of year.
-
-If you have questions about whether some behavior of Clojure is a bug, or submitting bug reports or enhancement requests, please ask on the https://groups.google.com/group/clojure[clojure Google group] or in other discussion forums. If a ticket is a duplicate of an existing ticket, it will be marked as such during triage.
-
-You need a Clojure JIRA account to create a ticket.  Go to the https://clojure.atlassian.net/projects/CLJ[Clojure JIRA page] and click the "Log In" link near the top right of the page, then on the next page click the "sign up" link.  If you see your name instead of a "Log in" link, you already have an account and are signed in. Please note that due to spam control, you will be able to create a ticket but unable to comment or edit tickets. Please request elevated privileges on mailing lists or discussion forums or contact Alex Miller at clojure@cognitect.com.
+To create a ticket, you must already have a Clojure JIRA account. Issues for Clojure itself can be created in the https://clojure.atlassian.net/projects/CLJ[CLJ] project. Contrib projects will have a link to their JIRA project in the README.
 
 == Qualities of a Great Ticket
 
