--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -58,6 +58,15 @@ Videos and presentations:
 * https://github.com/matthiasn/talk-transcripts[Talk transcripts] - Rich Hickey, David Nolen, Stuart Sierra, and others
 * http://www.parens-of-the-dead.com/[Parens of the Dead] - a screencast series writing a game from scratch with Clojure and ClojureScript
 
+Podcasts:
+
+* https://soundcloud.com/defn-771544745[defn] - The world's greatest vegetarian Clojure podcast hosted by Vijay Kiran and Ray McDermott
+* https://www.therepl.net/episodes/[The REPL] - A podcast diving into Clojure programs and libraries by Daniel Compton
+* https://clojurescriptpodcast.com/[ClojureScript Podcast] - Join Jacek Schae and explore an unusually expressive programming language with Lisp roots
+* https://lispcast.com/category/podcast/[Thoughts on Functional Programming by Eric Normand] - An off-the-cuff stream of Functional Programming ideas, skills, patterns, and news from Functional Programming expert Eric Normand
+* https://clojuredesign.club/[Functional Design in Clojure] - Christoph and Nate discuss software design problems and how they might be solved using functional principles and the Clojure programming language.
+* http://blog.cognitect.com/cognicast[Audio - Cognitect Blog] - A podcast by Cognitect, Inc. about software and the people that create it
+
 Video training (commercial):
 
 * http://www.purelyfunctional.tv/intro-to-clojure[Introduction to Clojure] - Eric Normand (LispCast)
