Add a (dosync radio) to the list of podcasts

--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -66,6 +66,7 @@ Podcasts:
 * https://lispcast.com/category/podcast/[Thoughts on Functional Programming by Eric Normand] - An off-the-cuff stream of Functional Programming ideas, skills, patterns, and news from Functional Programming expert Eric Normand
 * https://clojuredesign.club/[Functional Design in Clojure] - Christoph and Nate discuss software design problems and how they might be solved using functional principles and the Clojure programming language.
 * http://blog.cognitect.com/cognicast[Audio - Cognitect Blog] - A podcast by Cognitect, Inc. about software and the people that create it
+* https://anchor.fm/dosync-radio[(dosync radio)] - A podcast to discuss Clojure matters in Japanese.
 
 Video training (commercial):
 
