--- a/content/reference/deps_and_cli.adoc
+++ b/content/reference/deps_and_cli.adoc
@@ -33,7 +33,7 @@ The JVM classpath consists of a series of roots, either directory paths or the p
 We divide the process of building a classpath into two primary operations: `resolve-deps` and `make-classpath`. Below is a high-level view of this process:
 
 
-image::/images/content/guides/deps/deps.svg["Dep Tools", link="/images/content/guides/deps/deps.svg"]
+image::/images/content/guides/deps/deps.png["Dep Tools", link="/images/content/guides/deps/deps.png"]
 
 === resolve-deps
 
